SOHO-4698 - Fixed partial and dirty checkboxes were not aligning

--- a/sass/controls/_input.scss
+++ b/sass/controls/_input.scss
@@ -105,9 +105,7 @@
   @include font-size(14);
   color: $checkbox-label-color;
   display: inline-block;
-  margin-bottom: 10px;
-  // margin-left: -2px;
-  margin-top: 3px;
+  margin-top: 1px;
 }
 
 .field > input,
